syntax = "proto3";

option csharp_namespace = "gRPCClient";

message HandInHomework{
  optional string id = 1;
  string answer = 2;
  string studentUsername = 3;

}
message RequestCreateHandInHomework{
  string homeworkId = 1;
  string studentUsername = 2;
  HandInHomework handInHomework = 3;
}
message ResponseGetHandInHomework{
  HandInHomework handInHomework = 1;
}
message RequestGetHandInHomework{
  string handInHomeworkId = 1;
}
message RequestGetHandInByHomeworkIdAndStudentUsername{
  string homeworkId = 1;
  string studentUsername = 2;
}
message RequestGetHandInsByHomeworkId{
  string homeworkId = 1;
}
message ResponseGetHandInsByHomeworkId{
  repeated HandInHomework handIns = 1;
}
service HandInHomeworkService{
  rpc handInHomework( RequestCreateHandInHomework ) returns (ResponseGetHandInHomework);
  rpc getHandInById(RequestGetHandInHomework) returns (ResponseGetHandInHomework);
  rpc getHandInByHomeworkIdAndStudentUsername (RequestGetHandInByHomeworkIdAndStudentUsername) returns (ResponseGetHandInHomework);
  rpc getHandInsByHomeworkId(RequestGetHandInsByHomeworkId) returns (ResponseGetHandInsByHomeworkId);
}